syntax = "proto3";
package babylon.btcstaking.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/crypto/secp256k1/keys.proto";
import "babylon/btcstaking/v1/params.proto";
import "babylon/btcstaking/v1/btcstaking.proto";
import "babylon/btccheckpoint/v1/btccheckpoint.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "babylon/btcstaking/v1/pop.proto";

option go_package = "github.com/babylonchain/babylon/x/btcstaking/types";

// Msg defines the Msg service.
service Msg {
  // CreateBTCValidator creates a new BTC validator
  rpc CreateBTCValidator(MsgCreateBTCValidator) returns (MsgCreateBTCValidatorResponse);
  // CreateBTCDelegation creates a new BTC delegation
  rpc CreateBTCDelegation(MsgCreateBTCDelegation) returns (MsgCreateBTCDelegationResponse);
  // BtcUndelegate undelegates funds from exsitng btc delegation
  rpc BTCUndelegate(MsgBTCUndelegate) returns (MsgBTCUndelegateResponse);
  // AddCovenantSig handles a signature from covenant for slashing tx of staking tx for delegation
  rpc AddCovenantSig(MsgAddCovenantSig) returns (MsgAddCovenantSigResponse);
  // AddCovenantUnbondingSigs handles two signatures from covenant for:
  // - unbonding tx submitted to babylon by staker
  // - slashing tx corresponding to unbodning tx submitted to babylon by staker
  rpc AddCovenantUnbondingSigs(MsgAddCovenantUnbondingSigs) returns (MsgAddCovenantUnbondingSigsResponse);
  // AddValidatorUnbondingSig handles a signature from validator for unbonding tx submitted to babylon by staker
  rpc AddValidatorUnbondingSig(MsgAddValidatorUnbondingSig) returns (MsgAddValidatorUnbondingSigResponse);
  // UpdateParams updates the btcstaking module parameters.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgCreateBTCValidator is the message for creating a BTC validator
message MsgCreateBTCValidator {
  string signer = 1;

  // description defines the description terms for the BTC validator.
  cosmos.staking.v1beta1.Description description = 2;
  // commission defines the commission rate of BTC validator.
  string commission = 3 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  // babylon_pk is the Babylon secp256k1 PK of this BTC validator
  cosmos.crypto.secp256k1.PubKey babylon_pk = 4;
  // btc_pk is the Bitcoin secp256k1 PK of this BTC validator
  // the PK follows encoding in BIP-340 spec
  bytes btc_pk = 5 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // pop is the proof of possession of babylon_pk and btc_pk
  ProofOfPossession pop = 6;
}
// MsgCreateBTCValidatorResponse is the response for MsgCreateBTCValidator
message MsgCreateBTCValidatorResponse {}

// MsgCreateBTCDelegation is the message for creating a BTC delegation
message MsgCreateBTCDelegation {
  string signer = 1;
  // babylon_pk is the Babylon secp256k1 PK of this BTC delegation
  cosmos.crypto.secp256k1.PubKey babylon_pk = 2;
  // pop is the proof of possession of babylon_pk and btc_pk
  ProofOfPossession pop = 3;
  // staking_tx is the staking tx
  BabylonBTCTaprootTx staking_tx = 4;
  // staking_tx_info is the tx info of the staking tx, including the Merkle proof
  babylon.btccheckpoint.v1.TransactionInfo staking_tx_info = 5;
  // slashing_tx is the slashing tx
  // Note that the tx itself does not contain signatures, which are off-chain.
  bytes slashing_tx = 6 [ (gogoproto.customtype) = "BTCSlashingTx" ];
  // delegator_sig is the signature on the slashing tx by the delegator (i.e., SK corresponding to btc_pk).
  // It will be a part of the witness for the staking tx output.
  // The staking tx output further needs signatures from covenant and validator in
  // order to be spendable.
  bytes delegator_sig = 7 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340Signature" ];
}
// MsgCreateBTCDelegationResponse is the response for MsgCreateBTCDelegation
message MsgCreateBTCDelegationResponse {}


// MsgBTCUndelegate is the message undelegating existing and active delegation
message MsgBTCUndelegate {
  string signer = 1;
  // unbonding_tx is bitcoin unbonding transaction i.e transaction that spends
  // staking output and sends it to the unbonding output
  BabylonBTCTaprootTx unbonding_tx = 2;
  // slashing_tx is the slashing tx which slash unbonding contract
  // Note that the tx itself does not contain signatures, which are off-chain.
  bytes slashing_tx = 3 [ (gogoproto.customtype) = "BTCSlashingTx" ];
  // delegator_slashing_sig is the signature on the slashing tx by the delegator (i.e., SK corresponding to btc_pk).
  bytes delegator_slashing_sig = 4 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340Signature" ];
}

// MsgBtcUndelegateResponse is the response for MsgBtcUndelegate
message MsgBTCUndelegateResponse {}

// MsgAddCovenantSig is the message for handling a signature from covenant
message MsgAddCovenantSig {
  string signer = 1;
  // val_pk is the Bitcoin secp256k1 PK of the BTC validator
  // the PK follows encoding in BIP-340 spec
  bytes val_pk = 2 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // del_pk is the Bitcoin secp256k1 PK of the BTC delegation
  // the PK follows encoding in BIP-340 spec
  bytes del_pk = 3 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // staking_tx_hash is the hash of the staking tx.
  // (val_pk, del_pk, staking_tx_hash) uniquely identifies a BTC delegation
  string staking_tx_hash = 4;
  // sig is the signature of the covenant
  // the signature follows encoding in BIP-340 spec
  bytes sig = 5 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340Signature" ];
}
// MsgAddCovenantSigResponse is the response for MsgAddCovenantSig
message MsgAddCovenantSigResponse {}

// MsgUpdateParams defines a message for updating btcstaking module parameters.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the governance account.
  // just FYI: cosmos.AddressString marks that this field should use type alias
  // for AddressString instead of string, but the functionality is not yet implemented
  // in cosmos-proto
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the finality parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse is the response to the MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgAddCovenantUnbondingSigs is the message for handling a signature from covenant
message MsgAddCovenantUnbondingSigs {
  string signer = 1;
  // val_pk is the Bitcoin secp256k1 PK of the BTC validator
  // the PK follows encoding in BIP-340 spec
  bytes val_pk = 2 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // del_pk is the Bitcoin secp256k1 PK of the BTC delegation
  // the PK follows encoding in BIP-340 spec
  bytes del_pk = 3 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // staking_tx_hash is the hash of the staking tx.
  // (val_pk, del_pk, staking_tx_hash) uniquely identifies a BTC delegation
  string staking_tx_hash = 4;
  // unbonding_tx_sig is the signature of the covenant on the unbonding tx submitted to babylon
  // the signature follows encoding in BIP-340 spec
  bytes unbonding_tx_sig = 5 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340Signature" ];
  // slashing_unbonding_tx_sig is the signature of the covenant on slashing tx corresponding to unbodning tx submitted to babylon
  // the signature follows encoding in BIP-340 spec
  bytes slashing_unbonding_tx_sig = 6 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340Signature" ];

}
// MsgAddCovenantSigResponse is the response for MsgAddCovenantSig
message MsgAddCovenantUnbondingSigsResponse {}

// MsgAddValidatorUnbondingSig is the message for unbodning tx submitted to babylon by staker
message MsgAddValidatorUnbondingSig {
  string signer = 1;
  // val_pk is the Bitcoin secp256k1 PK of the BTC validator
  // the PK follows encoding in BIP-340 spec
  bytes val_pk = 2 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // del_pk is the Bitcoin secp256k1 PK of the BTC delegation
  // the PK follows encoding in BIP-340 spec
  bytes del_pk = 3 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340PubKey" ];
  // staking_tx_hash is the hash of the staking tx.
  // (val_pk, del_pk, staking_tx_hash) uniquely identifies a BTC delegation
  string staking_tx_hash = 4;
  // unbonding_tx_sig is the signature of validator for unbodning tx submitted to babylon by staker
  // the signature follows encoding in BIP-340 spec
  bytes unbonding_tx_sig = 5 [ (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BIP340Signature" ];
}
// MsgAddCovenantSigResponse is the response for MsgAddCovenantSig
message MsgAddValidatorUnbondingSigResponse {}
